# MetroDispositionOptimization

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  config.cfg  generator-config.cfg
src/: CMakeLists.txt  Json.cpp  Json.h  main.cpp  random.cpp  random.h  util.cpp  util.h
src/algo/: CycleFinder.cpp  CycleFinder.h  OnlineTopologicalSorter.cpp  OnlineTopologicalSorter.h  SkippedStopsInfo.cpp  SkippedStopsInfo.h
src/analyzer/: RollingStockAnalyzer.cpp
src/builder/: ModelBuilder.cpp  ModelBuilder.h
src/exceptions/: CycleException.cpp  CycleException.h
src/model/: PartialSchedule.cpp  PartialSchedule.h  definitions.cpp  definitions.h
src/options/: BranchAndBoundOptions.cpp  BranchAndBoundOptions.h  GraphBuilderOptions.cpp  GraphBuilderOptions.h  Options.cpp  Options.h  handle_options.cpp  handle_options.h
src/parser/: CSVConverter.cpp  CSVConverter.h  DataParser.cpp  DataParser.h  ProblemParser.cpp  ProblemParser.h
src/penalty/: DelayPenaltyComputer.cpp  DelayPenaltyComputer.h  DetailedPenalty.cpp  DetailedPenalty.h  PenaltyComputer.cpp  PenaltyComputer.h  definitions.h
src/runner/: BranchAndBoundRunner.cpp  BranchAndBoundRunner.h  FCFSRunner.cpp  FCFSRunner.h  IteratedRunner.cpp  IteratedRunner.h  MainRunner.cpp  MainRunner.h  NonIteratedRunner.cpp  NonIteratedRunner.h  Runner.cpp  Runner.h
src/statistics/: CharacteristicStatistic.cpp  CharacteristicStatistic.h  ChoiceSplitStatistics.h  MaxChoiceStatistics.cpp  MaxChoiceStatistics.h  ModelStatistics.cpp  ModelStatistics.h  ProblemStatistics.cpp  ProblemStatistics.h  SingelRunStatistics.cpp  SingleRunStatistics.h
test/: CMakeLists.txt  test_util.h
(+185 files in other folders)
